--- a/tests/test/dataflow.cfg
+++ b/tests/test/dataflow.cfg
@@ -18,24 +18,37 @@ NOTE : Temporary registers are considered as
      CONTROL FLOW GRAPH   
 **************************
 NUMBER OF BASIC BLOCKS : 1 
-NUMBER OF USED VARIABLES : 2 
+NUMBER OF USED VARIABLES : 4 
 --------------------------
 START BASIC BLOCK INFOS.  
 --------------------------
 [BLOCK 1] 
 NUMBER OF PREDECESSORS : 0 
 NUMBER OF SUCCESSORS : 1 
-NUMBER OF INSTRUCTIONS : 3 
-	1.  	ADDI R1 R13 #0 
+NUMBER OF INSTRUCTIONS : 6 
+	1.  	READ R1 0 
 			DEF = [R1]
-			USES = [R13]
-			LIVE IN = [R13]
+			LIVE IN = []
 			LIVE OUT = [R1]
-	2.  	WRITE R1 0 
+	2.  	MULI R2 R1 #5 
+			DEF = [R2]
 			USES = [R1]
 			LIVE IN = [R1]
+			LIVE OUT = [R2, R1]
+	3.  	STORE R1 L0 
+			USES = [R1]
+			LIVE IN = [R2, R1]
+			LIVE OUT = [R2]
+	4.  	SUB R3 R0 R2 
+			DEF = [R3]
+			USES = [R0, R2]
+			LIVE IN = [R2]
+			LIVE OUT = [R3]
+	5.  	WRITE R3 0 
+			USES = [R3]
+			LIVE IN = [R3]
 			LIVE OUT = []
-	3.  	HALT 
+	6.  	HALT 
 			LIVE IN = []
 			LIVE OUT = []
 **************************
