--- a/tests/test/output.cfg
+++ b/tests/test/output.cfg
@@ -18,17 +18,19 @@ NOTE : Temporary registers are considered as
      CONTROL FLOW GRAPH   
 **************************
 NUMBER OF BASIC BLOCKS : 1 
-NUMBER OF USED VARIABLES : 2 
+NUMBER OF USED VARIABLES : 4 
 --------------------------
 START BASIC BLOCK INFOS.  
 --------------------------
 [BLOCK 1] 
 NUMBER OF PREDECESSORS : 0 
 NUMBER OF SUCCESSORS : 1 
-NUMBER OF INSTRUCTIONS : 3 
-	1.  	ADDI R1 R13 #0 
-	2.  	WRITE R1 0 
-	3.  	HALT 
+NUMBER OF INSTRUCTIONS : 5 
+	1.  	READ R1 0 
+	2.  	MULI R2 R1 #5 
+	3.  	SUB R3 R0 R2 
+	4.  	WRITE R3 0 
+	5.  	HALT 
 **************************
 
 
