--- a/tests/shift_array_v2/dataflow.cfg
+++ b/tests/shift_array_v2/dataflow.cfg
@@ -18,14 +18,14 @@ NOTE : Temporary registers are considered as
      CONTROL FLOW GRAPH   
 **************************
 NUMBER OF BASIC BLOCKS : 4 
-NUMBER OF USED VARIABLES : 29 
+NUMBER OF USED VARIABLES : 46 
 --------------------------
 START BASIC BLOCK INFOS.  
 --------------------------
 [BLOCK 1] 
 NUMBER OF PREDECESSORS : 0 
 NUMBER OF SUCCESSORS : 1 
-NUMBER OF INSTRUCTIONS : 25 
+NUMBER OF INSTRUCTIONS : 26 
 	1.  	MOVA R1 L0 
 			DEF = [R1]
 			LIVE IN = []
@@ -74,221 +74,416 @@ NUMBER OF INSTRUCTIONS : 25
 	11.  	ADD (R5) R0 R6 
 			USES = [R0, R6, R5]
 			LIVE IN = [R6, R5]
-			LIVE OUT = [R6]
+			LIVE OUT = []
 	12.  	MOVA R7 L0 
 			DEF = [R7]
-			LIVE IN = [R6]
-			LIVE OUT = [R6, R7]
+			LIVE IN = []
+			LIVE OUT = [R7]
 	13.  	ADDI R7 R7 #3 
 			DEF = [R7]
 			USES = [R7]
-			LIVE IN = [R6, R7]
-			LIVE OUT = [R6, R7]
+			LIVE IN = [R7]
+			LIVE OUT = [R7]
 	14.  	ADDI R8 R0 #3 
 			DEF = [R8]
 			USES = [R0]
-			LIVE IN = [R6, R7]
-			LIVE OUT = [R6, R8, R7]
+			LIVE IN = [R7]
+			LIVE OUT = [R8, R7]
 	15.  	ADD (R7) R0 R8 
 			USES = [R0, R8, R7]
-			LIVE IN = [R6, R8, R7]
-			LIVE OUT = [R6]
+			LIVE IN = [R8, R7]
+			LIVE OUT = []
 	16.  	MOVA R9 L0 
 			DEF = [R9]
-			LIVE IN = [R6]
-			LIVE OUT = [R6, R9]
+			LIVE IN = []
+			LIVE OUT = [R9]
 	17.  	ADDI R9 R9 #4 
 			DEF = [R9]
 			USES = [R9]
-			LIVE IN = [R6, R9]
-			LIVE OUT = [R6, R9]
+			LIVE IN = [R9]
+			LIVE OUT = [R9]
 	18.  	ADDI R10 R0 #4 
 			DEF = [R10]
 			USES = [R0]
-			LIVE IN = [R6, R9]
-			LIVE OUT = [R6, R10, R9]
+			LIVE IN = [R9]
+			LIVE OUT = [R10, R9]
 	19.  	ADD (R9) R0 R10 
 			USES = [R0, R10, R9]
-			LIVE IN = [R6, R10, R9]
-			LIVE OUT = [R6]
+			LIVE IN = [R10, R9]
+			LIVE OUT = []
 	20.  	MOVA R11 L0 
 			DEF = [R11]
-			LIVE IN = [R6]
-			LIVE OUT = [R6, R11]
+			LIVE IN = []
+			LIVE OUT = [R11]
 	21.  	ADDI R11 R11 #5 
 			DEF = [R11]
 			USES = [R11]
-			LIVE IN = [R6, R11]
-			LIVE OUT = [R6, R11]
+			LIVE IN = [R11]
+			LIVE OUT = [R11]
 	22.  	ADDI R12 R0 #5 
 			DEF = [R12]
 			USES = [R0]
-			LIVE IN = [R6, R11]
-			LIVE OUT = [R6, R12, R11]
+			LIVE IN = [R11]
+			LIVE OUT = [R12, R11]
 	23.  	ADD (R11) R0 R12 
 			USES = [R0, R12, R11]
-			LIVE IN = [R6, R12, R11]
-			LIVE OUT = [R6]
-	24.  	SUBI R6 R6 #1 
-			DEF = [R6]
-			USES = [R6]
-			LIVE IN = [R6]
-			LIVE OUT = [R6]
-	25.  	ADDI R13 R0 #1 
+			LIVE IN = [R12, R11]
+			LIVE OUT = []
+	24.  	ADDI R13 R0 #6 
 			DEF = [R13]
 			USES = [R0]
-			LIVE IN = [R6]
-			LIVE OUT = [R13, R6]
+			LIVE IN = []
+			LIVE OUT = [R13]
+	25.  	SUBI R13 R13 #1 
+			DEF = [R13]
+			USES = [R13]
+			LIVE IN = [R13]
+			LIVE OUT = [R13]
+	26.  	ADDI R14 R0 #2 
+			DEF = [R14]
+			USES = [R0]
+			LIVE IN = [R13]
+			LIVE OUT = [R14, R13]
 --------------------------
 [BLOCK 2] 
 NUMBER OF PREDECESSORS : 2 
 NUMBER OF SUCCESSORS : 2 
 NUMBER OF INSTRUCTIONS : 1 
 	1.  L1	BLE L2 
-			LIVE IN = [R13, R6]
-			LIVE OUT = [R13, R6]
+			LIVE IN = [R14, R13]
+			LIVE OUT = [R14, R13]
 --------------------------
 [BLOCK 3] 
 NUMBER OF PREDECESSORS : 1 
 NUMBER OF SUCCESSORS : 1 
-NUMBER OF INSTRUCTIONS : 7 
-	1.  	MOVA R14 L0 
-			DEF = [R14]
-			LIVE IN = [R13, R6]
-			LIVE OUT = [R13, R6, R14]
-	2.  	ADD R15 R0 (R14) 
+NUMBER OF INSTRUCTIONS : 48 
+	1.  	MOVA R15 L0 
 			DEF = [R15]
-			USES = [R0, R14]
-			LIVE IN = [R13, R6, R14]
-			LIVE OUT = [R13, R15, R6]
-	3.  	MOVA R16 L0 
+			LIVE IN = [R14, R13]
+			LIVE OUT = [R14, R13, R15]
+	2.  	ADD R16 R0 (R15) 
 			DEF = [R16]
-			LIVE IN = [R13, R15, R6]
-			LIVE OUT = [R13, R15, R16, R6]
-	4.  	ADD R16 R16 R6 
-			DEF = [R16]
-			USES = [R16, R6]
-			LIVE IN = [R13, R15, R16, R6]
-			LIVE OUT = [R13, R15, R16, R6]
-	5.  	ADD (R16) R0 R15 
-			USES = [R0, R15, R16]
-			LIVE IN = [R13, R15, R16, R6]
-			LIVE OUT = [R13, R6]
-	6.  	SUBI R13 R13 #1 
-			DEF = [R13]
-			USES = [R13]
-			LIVE IN = [R13, R6]
-			LIVE OUT = [R13, R6]
-	7.  	BT L1 
-			LIVE IN = [R13, R6]
-			LIVE OUT = [R13, R6]
+			USES = [R0, R15]
+			LIVE IN = [R14, R13, R15]
+			LIVE OUT = [R14, R16, R13]
+	3.  	ADDI R17 R0 #1 
+			DEF = [R17]
+			USES = [R0]
+			LIVE IN = [R14, R16, R13]
+			LIVE OUT = [R14, R16, R13, R17]
+	4.  	MOVA R18 L0 
+			DEF = [R18]
+			LIVE IN = [R14, R16, R13, R17]
+			LIVE OUT = [R14, R16, R13, R17, R18]
+	5.  	ADD R18 R18 R17 
+			DEF = [R18]
+			USES = [R18, R17]
+			LIVE IN = [R14, R16, R13, R17, R18]
+			LIVE OUT = [R14, R16, R13, R17, R18]
+	6.  	ADD R19 R0 (R18) 
+			DEF = [R19]
+			USES = [R0, R18]
+			LIVE IN = [R14, R16, R13, R17, R18]
+			LIVE OUT = [R14, R16, R13, R17, R19]
+	7.  	SUBI R17 R17 #1 
+			DEF = [R17]
+			USES = [R17]
+			LIVE IN = [R14, R16, R13, R17, R19]
+			LIVE OUT = [R14, R16, R13, R17, R19]
+	8.  	MOVA R20 L0 
+			DEF = [R20]
+			LIVE IN = [R14, R16, R13, R17, R19]
+			LIVE OUT = [R14, R16, R13, R17, R19, R20]
+	9.  	ADD R20 R20 R17 
+			DEF = [R20]
+			USES = [R20, R17]
+			LIVE IN = [R14, R16, R13, R17, R19, R20]
+			LIVE OUT = [R14, R16, R13, R17, R19, R20]
+	10.  	ADD (R20) R0 R19 
+			USES = [R0, R19, R20]
+			LIVE IN = [R14, R16, R13, R17, R19, R20]
+			LIVE OUT = [R14, R16, R13, R17]
+	11.  	ADDI R17 R17 #2 
+			DEF = [R17]
+			USES = [R17]
+			LIVE IN = [R14, R16, R13, R17]
+			LIVE OUT = [R14, R16, R13, R17]
+	12.  	MOVA R21 L0 
+			DEF = [R21]
+			LIVE IN = [R14, R16, R13, R17]
+			LIVE OUT = [R14, R16, R13, R17, R21]
+	13.  	ADD R21 R21 R17 
+			DEF = [R21]
+			USES = [R21, R17]
+			LIVE IN = [R14, R16, R13, R17, R21]
+			LIVE OUT = [R14, R16, R13, R17, R21]
+	14.  	ADD R22 R0 (R21) 
+			DEF = [R22]
+			USES = [R0, R21]
+			LIVE IN = [R14, R16, R13, R17, R21]
+			LIVE OUT = [R14, R16, R13, R17, R22]
+	15.  	SUBI R17 R17 #1 
+			DEF = [R17]
+			USES = [R17]
+			LIVE IN = [R14, R16, R13, R17, R22]
+			LIVE OUT = [R14, R16, R13, R17, R22]
+	16.  	MOVA R23 L0 
+			DEF = [R23]
+			LIVE IN = [R14, R16, R13, R17, R22]
+			LIVE OUT = [R14, R16, R13, R17, R22, R23]
+	17.  	ADD R23 R23 R17 
+			DEF = [R23]
+			USES = [R23, R17]
+			LIVE IN = [R14, R16, R13, R17, R22, R23]
+			LIVE OUT = [R14, R16, R13, R17, R22, R23]
+	18.  	ADD (R23) R0 R22 
+			USES = [R0, R22, R23]
+			LIVE IN = [R14, R16, R13, R17, R22, R23]
+			LIVE OUT = [R14, R16, R13, R17]
+	19.  	ADDI R17 R17 #2 
+			DEF = [R17]
+			USES = [R17]
+			LIVE IN = [R14, R16, R13, R17]
+			LIVE OUT = [R14, R16, R13, R17]
+	20.  	MOVA R24 L0 
+			DEF = [R24]
+			LIVE IN = [R14, R16, R13, R17]
+			LIVE OUT = [R14, R16, R13, R17, R24]
+	21.  	ADD R24 R24 R17 
+			DEF = [R24]
+			USES = [R24, R17]
+			LIVE IN = [R14, R16, R13, R17, R24]
+			LIVE OUT = [R14, R16, R13, R17, R24]
+	22.  	ADD R25 R0 (R24) 
+			DEF = [R25]
+			USES = [R0, R24]
+			LIVE IN = [R14, R16, R13, R17, R24]
+			LIVE OUT = [R14, R16, R13, R17, R25]
+	23.  	SUBI R17 R17 #1 
+			DEF = [R17]
+			USES = [R17]
+			LIVE IN = [R14, R16, R13, R17, R25]
+			LIVE OUT = [R14, R16, R13, R17, R25]
+	24.  	MOVA R26 L0 
+			DEF = [R26]
+			LIVE IN = [R14, R16, R13, R17, R25]
+			LIVE OUT = [R14, R16, R13, R17, R25, R26]
+	25.  	ADD R26 R26 R17 
+			DEF = [R26]
+			USES = [R26, R17]
+			LIVE IN = [R14, R16, R13, R17, R25, R26]
+			LIVE OUT = [R14, R16, R13, R17, R25, R26]
+	26.  	ADD (R26) R0 R25 
+			USES = [R0, R25, R26]
+			LIVE IN = [R14, R16, R13, R17, R25, R26]
+			LIVE OUT = [R14, R16, R13, R17]
+	27.  	ADDI R17 R17 #2 
+			DEF = [R17]
+			USES = [R17]
+			LIVE IN = [R14, R16, R13, R17]
+			LIVE OUT = [R14, R16, R13, R17]
+	28.  	MOVA R27 L0 
+			DEF = [R27]
+			LIVE IN = [R14, R16, R13, R17]
+			LIVE OUT = [R14, R16, R13, R17, R27]
+	29.  	ADD R27 R27 R17 
+			DEF = [R27]
+			USES = [R27, R17]
+			LIVE IN = [R14, R16, R13, R17, R27]
+			LIVE OUT = [R14, R16, R13, R17, R27]
+	30.  	ADD R28 R0 (R27) 
+			DEF = [R28]
+			USES = [R0, R27]
+			LIVE IN = [R14, R16, R13, R17, R27]
+			LIVE OUT = [R14, R16, R13, R17, R28]
+	31.  	SUBI R17 R17 #1 
+			DEF = [R17]
+			USES = [R17]
+			LIVE IN = [R14, R16, R13, R17, R28]
+			LIVE OUT = [R14, R16, R13, R17, R28]
+	32.  	MOVA R29 L0 
+			DEF = [R29]
+			LIVE IN = [R14, R16, R13, R17, R28]
+			LIVE OUT = [R14, R16, R13, R17, R28, R29]
+	33.  	ADD R29 R29 R17 
+			DEF = [R29]
+			USES = [R29, R17]
+			LIVE IN = [R14, R16, R13, R17, R28, R29]
+			LIVE OUT = [R14, R16, R13, R17, R28, R29]
+	34.  	ADD (R29) R0 R28 
+			USES = [R0, R28, R29]
+			LIVE IN = [R14, R16, R13, R17, R28, R29]
+			LIVE OUT = [R14, R16, R13, R17]
+	35.  	ADDI R17 R17 #2 
+			DEF = [R17]
+			USES = [R17]
+			LIVE IN = [R14, R16, R13, R17]
+			LIVE OUT = [R14, R16, R13, R17]
+	36.  	MOVA R30 L0 
+			DEF = [R30]
+			LIVE IN = [R14, R16, R13, R17]
+			LIVE OUT = [R14, R16, R13, R17, R30]
+	37.  	ADD R30 R30 R17 
+			DEF = [R30]
+			USES = [R30, R17]
+			LIVE IN = [R14, R16, R13, R17, R30]
+			LIVE OUT = [R14, R16, R13, R17, R30]
+	38.  	ADD R31 R0 (R30) 
+			DEF = [R31]
+			USES = [R0, R30]
+			LIVE IN = [R14, R16, R13, R17, R30]
+			LIVE OUT = [R14, R16, R13, R17, R31]
+	39.  	SUBI R17 R17 #1 
+			DEF = [R17]
+			USES = [R17]
+			LIVE IN = [R14, R16, R13, R17, R31]
+			LIVE OUT = [R14, R16, R13, R17, R31]
+	40.  	MOVA R32 L0 
+			DEF = [R32]
+			LIVE IN = [R14, R16, R13, R17, R31]
+			LIVE OUT = [R14, R16, R13, R17, R31, R32]
+	41.  	ADD R32 R32 R17 
+			DEF = [R32]
+			USES = [R32, R17]
+			LIVE IN = [R14, R16, R13, R17, R31, R32]
+			LIVE OUT = [R14, R16, R13, R17, R31, R32]
+	42.  	ADD (R32) R0 R31 
+			USES = [R0, R31, R32]
+			LIVE IN = [R14, R16, R13, R17, R31, R32]
+			LIVE OUT = [R14, R16, R13, R17]
+	43.  	ADDI R17 R17 #2 
+			DEF = [R17]
+			USES = [R17]
+			LIVE IN = [R14, R16, R13, R17]
+			LIVE OUT = [R14, R16, R13]
+	44.  	MOVA R33 L0 
+			DEF = [R33]
+			LIVE IN = [R14, R16, R13]
+			LIVE OUT = [R14, R16, R33, R13]
+	45.  	ADD R33 R33 R13 
+			DEF = [R33]
+			USES = [R33, R13]
+			LIVE IN = [R14, R16, R33, R13]
+			LIVE OUT = [R14, R16, R33, R13]
+	46.  	ADD (R33) R0 R16 
+			USES = [R0, R16, R33]
+			LIVE IN = [R14, R16, R33, R13]
+			LIVE OUT = [R14, R13]
+	47.  	SUBI R14 R14 #1 
+			DEF = [R14]
+			USES = [R14]
+			LIVE IN = [R14, R13]
+			LIVE OUT = [R14, R13]
+	48.  	BT L1 
+			LIVE IN = [R14, R13]
+			LIVE OUT = [R14, R13]
 --------------------------
 [BLOCK 4] 
 NUMBER OF PREDECESSORS : 1 
 NUMBER OF SUCCESSORS : 1 
 NUMBER OF INSTRUCTIONS : 24 
-	1.  L2	MOVA R17 L0 
-			DEF = [R17]
+	1.  L2	MOVA R34 L0 
+			DEF = [R34]
 			LIVE IN = []
-			LIVE OUT = [R17]
-	2.  	ADD R18 R0 (R17) 
-			DEF = [R18]
-			USES = [R0, R17]
-			LIVE IN = [R17]
-			LIVE OUT = [R18]
-	3.  	WRITE R18 0 
-			USES = [R18]
-			LIVE IN = [R18]
+			LIVE OUT = [R34]
+	2.  	ADD R35 R0 (R34) 
+			DEF = [R35]
+			USES = [R0, R34]
+			LIVE IN = [R34]
+			LIVE OUT = [R35]
+	3.  	WRITE R35 0 
+			USES = [R35]
+			LIVE IN = [R35]
 			LIVE OUT = []
-	4.  	MOVA R19 L0 
-			DEF = [R19]
+	4.  	MOVA R36 L0 
+			DEF = [R36]
 			LIVE IN = []
-			LIVE OUT = [R19]
-	5.  	ADDI R19 R19 #1 
-			DEF = [R19]
-			USES = [R19]
-			LIVE IN = [R19]
-			LIVE OUT = [R19]
-	6.  	ADD R20 R0 (R19) 
-			DEF = [R20]
-			USES = [R0, R19]
-			LIVE IN = [R19]
-			LIVE OUT = [R20]
-	7.  	WRITE R20 0 
-			USES = [R20]
-			LIVE IN = [R20]
+			LIVE OUT = [R36]
+	5.  	ADDI R36 R36 #1 
+			DEF = [R36]
+			USES = [R36]
+			LIVE IN = [R36]
+			LIVE OUT = [R36]
+	6.  	ADD R37 R0 (R36) 
+			DEF = [R37]
+			USES = [R0, R36]
+			LIVE IN = [R36]
+			LIVE OUT = [R37]
+	7.  	WRITE R37 0 
+			USES = [R37]
+			LIVE IN = [R37]
 			LIVE OUT = []
-	8.  	MOVA R21 L0 
-			DEF = [R21]
+	8.  	MOVA R38 L0 
+			DEF = [R38]
 			LIVE IN = []
-			LIVE OUT = [R21]
-	9.  	ADDI R21 R21 #2 
-			DEF = [R21]
-			USES = [R21]
-			LIVE IN = [R21]
-			LIVE OUT = [R21]
-	10.  	ADD R22 R0 (R21) 
-			DEF = [R22]
-			USES = [R0, R21]
-			LIVE IN = [R21]
-			LIVE OUT = [R22]
-	11.  	WRITE R22 0 
-			USES = [R22]
-			LIVE IN = [R22]
+			LIVE OUT = [R38]
+	9.  	ADDI R38 R38 #2 
+			DEF = [R38]
+			USES = [R38]
+			LIVE IN = [R38]
+			LIVE OUT = [R38]
+	10.  	ADD R39 R0 (R38) 
+			DEF = [R39]
+			USES = [R0, R38]
+			LIVE IN = [R38]
+			LIVE OUT = [R39]
+	11.  	WRITE R39 0 
+			USES = [R39]
+			LIVE IN = [R39]
 			LIVE OUT = []
-	12.  	MOVA R23 L0 
-			DEF = [R23]
+	12.  	MOVA R40 L0 
+			DEF = [R40]
 			LIVE IN = []
-			LIVE OUT = [R23]
-	13.  	ADDI R23 R23 #3 
-			DEF = [R23]
-			USES = [R23]
-			LIVE IN = [R23]
-			LIVE OUT = [R23]
-	14.  	ADD R24 R0 (R23) 
-			DEF = [R24]
-			USES = [R0, R23]
-			LIVE IN = [R23]
-			LIVE OUT = [R24]
-	15.  	WRITE R24 0 
-			USES = [R24]
-			LIVE IN = [R24]
+			LIVE OUT = [R40]
+	13.  	ADDI R40 R40 #3 
+			DEF = [R40]
+			USES = [R40]
+			LIVE IN = [R40]
+			LIVE OUT = [R40]
+	14.  	ADD R41 R0 (R40) 
+			DEF = [R41]
+			USES = [R0, R40]
+			LIVE IN = [R40]
+			LIVE OUT = [R41]
+	15.  	WRITE R41 0 
+			USES = [R41]
+			LIVE IN = [R41]
 			LIVE OUT = []
-	16.  	MOVA R25 L0 
-			DEF = [R25]
+	16.  	MOVA R42 L0 
+			DEF = [R42]
 			LIVE IN = []
-			LIVE OUT = [R25]
-	17.  	ADDI R25 R25 #4 
-			DEF = [R25]
-			USES = [R25]
-			LIVE IN = [R25]
-			LIVE OUT = [R25]
-	18.  	ADD R26 R0 (R25) 
-			DEF = [R26]
-			USES = [R0, R25]
-			LIVE IN = [R25]
-			LIVE OUT = [R26]
-	19.  	WRITE R26 0 
-			USES = [R26]
-			LIVE IN = [R26]
+			LIVE OUT = [R42]
+	17.  	ADDI R42 R42 #4 
+			DEF = [R42]
+			USES = [R42]
+			LIVE IN = [R42]
+			LIVE OUT = [R42]
+	18.  	ADD R43 R0 (R42) 
+			DEF = [R43]
+			USES = [R0, R42]
+			LIVE IN = [R42]
+			LIVE OUT = [R43]
+	19.  	WRITE R43 0 
+			USES = [R43]
+			LIVE IN = [R43]
 			LIVE OUT = []
-	20.  	MOVA R27 L0 
-			DEF = [R27]
+	20.  	MOVA R44 L0 
+			DEF = [R44]
 			LIVE IN = []
-			LIVE OUT = [R27]
-	21.  	ADDI R27 R27 #5 
-			DEF = [R27]
-			USES = [R27]
-			LIVE IN = [R27]
-			LIVE OUT = [R27]
-	22.  	ADD R28 R0 (R27) 
-			DEF = [R28]
-			USES = [R0, R27]
-			LIVE IN = [R27]
-			LIVE OUT = [R28]
-	23.  	WRITE R28 0 
-			USES = [R28]
-			LIVE IN = [R28]
+			LIVE OUT = [R44]
+	21.  	ADDI R44 R44 #5 
+			DEF = [R44]
+			USES = [R44]
+			LIVE IN = [R44]
+			LIVE OUT = [R44]
+	22.  	ADD R45 R0 (R44) 
+			DEF = [R45]
+			USES = [R0, R44]
+			LIVE IN = [R44]
+			LIVE OUT = [R45]
+	23.  	WRITE R45 0 
+			USES = [R45]
+			LIVE IN = [R45]
 			LIVE OUT = []
 	24.  	HALT 
 			LIVE IN = []
