--- a/tests/vec_add_vec_sub/dataflow.cfg
+++ b/tests/vec_add_vec_sub/dataflow.cfg
@@ -17,71 +17,245 @@ NOTE : Temporary registers are considered as
 **************************
      CONTROL FLOW GRAPH   
 **************************
-NUMBER OF BASIC BLOCKS : 3 
-NUMBER OF USED VARIABLES : 6 
+NUMBER OF BASIC BLOCKS : 4 
+NUMBER OF USED VARIABLES : 26 
 --------------------------
 START BASIC BLOCK INFOS.  
 --------------------------
 [BLOCK 1] 
 NUMBER OF PREDECESSORS : 0 
 NUMBER OF SUCCESSORS : 1 
-NUMBER OF INSTRUCTIONS : 1 
-	1.  	MOVA R1 10 
+NUMBER OF INSTRUCTIONS : 23 
+	1.  	MOVA R1 L0 
 			DEF = [R1]
 			LIVE IN = []
 			LIVE OUT = [R1]
+	2.  	ADDI R2 R0 #1 
+			DEF = [R2]
+			USES = [R0]
+			LIVE IN = [R1]
+			LIVE OUT = [R2, R1]
+	3.  	ADD (R1) R0 R2 
+			USES = [R0, R2, R1]
+			LIVE IN = [R2, R1]
+			LIVE OUT = []
+	4.  	MOVA R3 L0 
+			DEF = [R3]
+			LIVE IN = []
+			LIVE OUT = [R3]
+	5.  	ADDI R3 R3 #1 
+			DEF = [R3]
+			USES = [R3]
+			LIVE IN = [R3]
+			LIVE OUT = [R3]
+	6.  	ADDI R4 R0 #2 
+			DEF = [R4]
+			USES = [R0]
+			LIVE IN = [R3]
+			LIVE OUT = [R4, R3]
+	7.  	ADD (R3) R0 R4 
+			USES = [R0, R4, R3]
+			LIVE IN = [R4, R3]
+			LIVE OUT = []
+	8.  	MOVA R5 L0 
+			DEF = [R5]
+			LIVE IN = []
+			LIVE OUT = [R5]
+	9.  	ADDI R5 R5 #2 
+			DEF = [R5]
+			USES = [R5]
+			LIVE IN = [R5]
+			LIVE OUT = [R5]
+	10.  	ADDI R6 R0 #3 
+			DEF = [R6]
+			USES = [R0]
+			LIVE IN = [R5]
+			LIVE OUT = [R6, R5]
+	11.  	ADD (R5) R0 R6 
+			USES = [R0, R6, R5]
+			LIVE IN = [R6, R5]
+			LIVE OUT = []
+	12.  	MOVA R7 L1 
+			DEF = [R7]
+			LIVE IN = []
+			LIVE OUT = [R7]
+	13.  	ADDI R8 R0 #3 
+			DEF = [R8]
+			USES = [R0]
+			LIVE IN = [R7]
+			LIVE OUT = [R8, R7]
+	14.  	ADD (R7) R0 R8 
+			USES = [R0, R8, R7]
+			LIVE IN = [R8, R7]
+			LIVE OUT = []
+	15.  	MOVA R9 L1 
+			DEF = [R9]
+			LIVE IN = []
+			LIVE OUT = [R9]
+	16.  	ADDI R9 R9 #1 
+			DEF = [R9]
+			USES = [R9]
+			LIVE IN = [R9]
+			LIVE OUT = [R9]
+	17.  	ADDI R10 R0 #2 
+			DEF = [R10]
+			USES = [R0]
+			LIVE IN = [R9]
+			LIVE OUT = [R10, R9]
+	18.  	ADD (R9) R0 R10 
+			USES = [R0, R10, R9]
+			LIVE IN = [R10, R9]
+			LIVE OUT = []
+	19.  	MOVA R11 L1 
+			DEF = [R11]
+			LIVE IN = []
+			LIVE OUT = [R11]
+	20.  	ADDI R11 R11 #2 
+			DEF = [R11]
+			USES = [R11]
+			LIVE IN = [R11]
+			LIVE OUT = [R11]
+	21.  	ADDI R12 R0 #1 
+			DEF = [R12]
+			USES = [R0]
+			LIVE IN = [R11]
+			LIVE OUT = [R12, R11]
+	22.  	ADD (R11) R0 R12 
+			USES = [R0, R12, R11]
+			LIVE IN = [R12, R11]
+			LIVE OUT = []
+	23.  	ADDI R13 R0 #3 
+			DEF = [R13]
+			USES = [R0]
+			LIVE IN = []
+			LIVE OUT = [R13]
 --------------------------
 [BLOCK 2] 
-NUMBER OF PREDECESSORS : 1 
-NUMBER OF SUCCESSORS : 1 
+NUMBER OF PREDECESSORS : 2 
+NUMBER OF SUCCESSORS : 2 
 NUMBER OF INSTRUCTIONS : 2 
-	1.  L3	ANDB R1 R1 R1 
-			DEF = [R1]
-			USES = [R1, R1]
-			LIVE IN = [R1]
-			LIVE OUT = [R1]
+	1.  L3	ANDB R13 R13 R13 
+			DEF = [R13]
+			USES = [R13, R13]
+			LIVE IN = [R13]
+			LIVE OUT = [R13]
 	2.  	BEQ L4 
-			LIVE IN = [R1]
-			LIVE OUT = [R1]
+			LIVE IN = [R13]
+			LIVE OUT = [R13]
 --------------------------
 [BLOCK 3] 
 NUMBER OF PREDECESSORS : 1 
 NUMBER OF SUCCESSORS : 1 
-NUMBER OF INSTRUCTIONS : 8 
-	1.  	SUBI R1 R1 #1 
-			DEF = [R1]
-			USES = [R1]
-			LIVE IN = [R1]
-			LIVE OUT = [R1]
-	2.  	MOVA R3 L0 
-			DEF = [R3]
-			LIVE IN = [R1]
-			LIVE OUT = [R1, R3]
-	3.  	ADD R3 R3 R1 
-			DEF = [R3]
-			USES = [R3, R1]
-			LIVE IN = [R1, R3]
-			LIVE OUT = [R1, R3]
-	4.  	ADD R4 R0 (R3) 
-			DEF = [R4]
-			USES = [R0, R3]
-			LIVE IN = [R1, R3]
-			LIVE OUT = [R1]
-	5.  	MOVA R5 L1 
-			DEF = [R5]
-			LIVE IN = [R1]
-			LIVE OUT = [R5, R1]
-	6.  	ADD R5 R5 R1 
-			DEF = [R5]
-			USES = [R5, R1]
-			LIVE IN = [R5, R1]
-			LIVE OUT = [R5]
-	7.  	ADD R6 R0 (R5) 
-			DEF = [R6]
-			USES = [R0, R5]
-			LIVE IN = [R5]
+NUMBER OF INSTRUCTIONS : 12 
+	1.  	SUBI R13 R13 #1 
+			DEF = [R13]
+			USES = [R13]
+			LIVE IN = [R13]
+			LIVE OUT = [R13]
+	2.  	MOVA R15 L0 
+			DEF = [R15]
+			LIVE IN = [R13]
+			LIVE OUT = [R13, R15]
+	3.  	ADD R15 R15 R13 
+			DEF = [R15]
+			USES = [R15, R13]
+			LIVE IN = [R13, R15]
+			LIVE OUT = [R13, R15]
+	4.  	ADD R16 R0 (R15) 
+			DEF = [R16]
+			USES = [R0, R15]
+			LIVE IN = [R13, R15]
+			LIVE OUT = [R13, R16]
+	5.  	MOVA R17 L1 
+			DEF = [R17]
+			LIVE IN = [R13, R16]
+			LIVE OUT = [R13, R16, R17]
+	6.  	ADD R17 R17 R13 
+			DEF = [R17]
+			USES = [R17, R13]
+			LIVE IN = [R13, R16, R17]
+			LIVE OUT = [R13, R16, R17]
+	7.  	ADD R18 R0 (R17) 
+			DEF = [R18]
+			USES = [R0, R17]
+			LIVE IN = [R13, R16, R17]
+			LIVE OUT = [R13, R16, R18]
+	8.  	ADD R14 R16 R18 
+			DEF = [R14]
+			USES = [R16, R18]
+			LIVE IN = [R13, R16, R18]
+			LIVE OUT = [R14, R13]
+	9.  	MOVA R19 L2 
+			DEF = [R19]
+			LIVE IN = [R14, R13]
+			LIVE OUT = [R14, R19, R13]
+	10.  	ADD R19 R19 R13 
+			DEF = [R19]
+			USES = [R19, R13]
+			LIVE IN = [R14, R19, R13]
+			LIVE OUT = [R14, R19, R13]
+	11.  	ADD (R19) R0 R14 
+			USES = [R0, R14, R19]
+			LIVE IN = [R14, R19, R13]
+			LIVE OUT = [R13]
+	12.  	BT L3 
+			LIVE IN = [R13]
+			LIVE OUT = [R13]
+--------------------------
+[BLOCK 4] 
+NUMBER OF PREDECESSORS : 1 
+NUMBER OF SUCCESSORS : 1 
+NUMBER OF INSTRUCTIONS : 12 
+	1.  L4	MOVA R20 L2 
+			DEF = [R20]
+			LIVE IN = []
+			LIVE OUT = [R20]
+	2.  	ADD R21 R0 (R20) 
+			DEF = [R21]
+			USES = [R0, R20]
+			LIVE IN = [R20]
+			LIVE OUT = [R21]
+	3.  	WRITE R21 0 
+			USES = [R21]
+			LIVE IN = [R21]
 			LIVE OUT = []
-	8.  	HALT 
+	4.  	MOVA R22 L2 
+			DEF = [R22]
+			LIVE IN = []
+			LIVE OUT = [R22]
+	5.  	ADDI R22 R22 #1 
+			DEF = [R22]
+			USES = [R22]
+			LIVE IN = [R22]
+			LIVE OUT = [R22]
+	6.  	ADD R23 R0 (R22) 
+			DEF = [R23]
+			USES = [R0, R22]
+			LIVE IN = [R22]
+			LIVE OUT = [R23]
+	7.  	WRITE R23 0 
+			USES = [R23]
+			LIVE IN = [R23]
+			LIVE OUT = []
+	8.  	MOVA R24 L2 
+			DEF = [R24]
+			LIVE IN = []
+			LIVE OUT = [R24]
+	9.  	ADDI R24 R24 #2 
+			DEF = [R24]
+			USES = [R24]
+			LIVE IN = [R24]
+			LIVE OUT = [R24]
+	10.  	ADD R25 R0 (R24) 
+			DEF = [R25]
+			USES = [R0, R24]
+			LIVE IN = [R24]
+			LIVE OUT = [R25]
+	11.  	WRITE R25 0 
+			USES = [R25]
+			LIVE IN = [R25]
+			LIVE OUT = []
+	12.  	HALT 
 			LIVE IN = []
 			LIVE OUT = []
 **************************
