--- a/tests/aif/dataflow.cfg
+++ b/tests/aif/dataflow.cfg
@@ -23,10 +23,10 @@ NUMBER OF USED VARIABLES : 5
 START BASIC BLOCK INFOS.  
 --------------------------
 [BLOCK 1] 
-NUMBER OF PREDECESSORS : 0 
-NUMBER OF SUCCESSORS : 2 
-NUMBER OF INSTRUCTIONS : 5 
-	1.  L1	ADDI R2 R0 #2 
+NUMBER OF PREDECESSORS : 1 
+NUMBER OF SUCCESSORS : 1 
+NUMBER OF INSTRUCTIONS : 2 
+	1.  L1	ADDI R2 R0 #1 
 			DEF = [R2]
 			USES = [R0]
 			LIVE IN = []
@@ -35,38 +35,11 @@ NUMBER OF INSTRUCTIONS : 5
 			USES = [R2]
 			LIVE IN = [R2]
 			LIVE OUT = []
-	3.  	READ R1 0 
-			DEF = [R1]
-			LIVE IN = []
-			LIVE OUT = [R1]
-	4.  	STORE R1 L0 
-			USES = [R1]
-			LIVE IN = [R1]
-			LIVE OUT = []
-	5.  	BLT L2 
-			LIVE IN = []
-			LIVE OUT = []
 --------------------------
 [BLOCK 2] 
 NUMBER OF PREDECESSORS : 1 
 NUMBER OF SUCCESSORS : 2 
-NUMBER OF INSTRUCTIONS : 1 
-	1.  	BEQ L2 
-			LIVE IN = []
-			LIVE OUT = []
---------------------------
-[BLOCK 3] 
-NUMBER OF PREDECESSORS : 1 
-NUMBER OF SUCCESSORS : 1 
-NUMBER OF INSTRUCTIONS : 1 
-	1.  	BGT L2 
-			LIVE IN = []
-			LIVE OUT = []
---------------------------
-[BLOCK 4] 
-NUMBER OF PREDECESSORS : 3 
-NUMBER OF SUCCESSORS : 1 
-NUMBER OF INSTRUCTIONS : 2 
+NUMBER OF INSTRUCTIONS : 6 
 	1.  L2	ADDI R3 R0 #3 
 			DEF = [R3]
 			USES = [R0]
@@ -76,12 +49,44 @@ NUMBER OF INSTRUCTIONS : 2
 			USES = [R3]
 			LIVE IN = [R3]
 			LIVE OUT = []
+	3.  	READ R1 0 
+			DEF = [R1]
+			LIVE IN = []
+			LIVE OUT = [R1]
+	4.  	ANDB R1 R1 R1 
+			DEF = [R1]
+			USES = [R1, R1]
+			LIVE IN = [R1]
+			LIVE OUT = [R1]
+	5.  	STORE R1 L0 
+			USES = [R1]
+			LIVE IN = [R1]
+			LIVE OUT = []
+	6.  	BLT L1 
+			LIVE IN = []
+			LIVE OUT = []
 --------------------------
-[BLOCK 5] 
+[BLOCK 3] 
+NUMBER OF PREDECESSORS : 1 
+NUMBER OF SUCCESSORS : 2 
+NUMBER OF INSTRUCTIONS : 1 
+	1.  	BEQ L3 
+			LIVE IN = []
+			LIVE OUT = []
+--------------------------
+[BLOCK 4] 
 NUMBER OF PREDECESSORS : 1 
 NUMBER OF SUCCESSORS : 1 
+NUMBER OF INSTRUCTIONS : 1 
+	1.  	BGT L3 
+			LIVE IN = []
+			LIVE OUT = []
+--------------------------
+[BLOCK 5] 
+NUMBER OF PREDECESSORS : 2 
+NUMBER OF SUCCESSORS : 1 
 NUMBER OF INSTRUCTIONS : 3 
-	1.  L3	ADDI R4 R0 #1 
+	1.  L4	ADDI R4 R0 #2 
 			DEF = [R4]
 			USES = [R0]
 			LIVE IN = []
